# swagger.json
@@ -5,7 +5,6 @@
     "description": "Memorize quotes for CSE341 project",
     "version": "1.0.0"
   },
-  "notes": "cse341-memorize-quotes.onrender.com",
   "host": "cse341-memorize-quotes.onrender.com",
   "basePath": "/",
   "schemes": [
@@ -18,6 +17,36 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/auth/github": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/logout": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/auth/github/callback": {
+      "get": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
@@ -78,8 +107,11 @@
           "200": {
             "description": "OK"
           },
-          "422": {
-            "description": "Unprocessable Entity"
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -163,11 +195,14 @@
           "400": {
             "description": "Bad Request"
           },
-          "422": {
-            "description": "Unprocessable Entity"
+          "401": {
+            "description": "Unauthorized"
           },
-          "500": {
-            "description": "Internal Server Error"
+          "412": {
+            "description": "Precondition Failed"
+          },
+          "505": {
+            "description": "HTTP Version Not Supported"
           }
         }
       },
@@ -193,6 +228,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -236,6 +274,12 @@
                 "class": {
                   "example": "any"
                 },
+                "topic": {
+                  "example": "any"
+                },
+                "deficulty": {
+                  "example": "any"
+                },
                 "book": {
                   "example": "any"
                 },
@@ -256,8 +300,11 @@
           "200": {
             "description": "OK"
           },
-          "422": {
-            "description": "Unprocessable Entity"
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -341,8 +388,11 @@
           "400": {
             "description": "Bad Request"
           },
-          "422": {
-            "description": "Unprocessable Entity"
+          "401": {
+            "description": "Unauthorized"
+          },
+          "412": {
+            "description": "Precondition Failed"
           },
           "500": {
             "description": "Internal Server Error"
@@ -371,6 +421,9 @@
           },
           "400": {
             "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
